# video-cover-editor-bot

./: .env.template  .gitignore  Makefile  README  pyproject.toml  requirements.txt
src/: config.py  main.py  run.py  user.py
